--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+.login-form {
+     display: flex;
+     flex-direction: column;
+     
+    }
+
+.name_field {
+     display: flex;
+     flex-direction: row;
+}
