--- a/app/assets/stylesheets/splash/body.scss
+++ b/app/assets/stylesheets/splash/body.scss
@@ -1,16 +1,16 @@
 .splashbody {
      display: flex;
      background-color: rgb(195, 245, 60);
-     height: 1000px;
+     height: 655px;
      align-items: center;
      border-bottom-color: black;
      border-bottom-style: solid;
      border-bottom-width: 1px;
      box-shadow: inset 0 7px 5px -7px rgba(0,0,0,0.3);
+     justify-content: center;
 }
 
 .splashbodywords {
-     position: relative;
      display: flex;
      flex-direction: column;
      height: 340px;
@@ -18,6 +18,7 @@
      justify-content: space-between;
      left: 335px;
      align-items: left;
+     margin-left: -40%;
 }
 
 .splashbodyheader {
