--- a/app/assets/stylesheets/splash/nav.scss
+++ b/app/assets/stylesheets/splash/nav.scss
@@ -2,7 +2,6 @@
      display: flex;
      align-items: center;
      height: 64px;
-     position: sticky;
     }
 
 .subnav {
@@ -49,8 +48,6 @@
 .logo {
      display: flex;
      text-align: center;
-     left: 4px;
-     top: -4px;
      font-size: 26px;
      font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
      padding: 20px;
@@ -74,6 +71,65 @@
 .arrow {
      position: relative;
      left: 10px;
+}
+
+.products-dropdown-up {
+    background-color: white;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    height: 64px;
+    padding: 0px;
+    position: absolute;
+    top: 64px;
+    left: 0;
+
+}
+
+.products-dropdown-up li {
+    padding: 0 20px;
+}
+
+.products-dropdown-hover:hover {
+    color: rgb(0,200,5);
+}
+
+.products-dropdown-crypto {
+    color: rgb(255,90,135);
+}
+
+.products-dropdown-crypto:hover {
+    filter: brightness(0.9);
+}
+
+.products-dropdown-down {
+    display: none;
+}
+
+.learn-dropdown-up {
+    background-color: white;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    height: 64px;
+    padding: 0px;
+    position: absolute;
+    top: 64px;
+    left: 0;
+
+}
+
+
+.learn-dropdown-up li {
+    padding: 0 20px;
+}
+
+.learn-dropdown-hover:hover {
+    color: rgb(0,200,5);
+}
+
+.learn-dropdown-down {
+    display: none;
 }
 
 .splash-login:hover {
