--- a/app/assets/stylesheets/signup/signup_form.scss
+++ b/app/assets/stylesheets/signup/signup_form.scss
@@ -33,6 +33,7 @@
 
 .email-input {
     padding-bottom: 25px;
+
 }
 
 .signup-username {
@@ -61,6 +62,8 @@
     padding: 12px;
     width: 100%;
     height: 36px;
+    &:focus{
+        border-color:rgb(0,200,5)};
 }
 
 .signup-input:hover {
@@ -98,6 +101,9 @@
     line-height: 20px;
     letter-spacing: -0.1px;
     border-radius: 4px;
+    &:hover {
+        filter: brightness(0.9);
+    }
 }
 
 .signup-submit-started {
