--- a/app/assets/stylesheets/signup/signup_left_bottom.scss
+++ b/app/assets/stylesheets/signup/signup_left_bottom.scss
@@ -17,13 +17,16 @@
 }
 
 .signup-leftpage-content-2-2 {
-    margin-bottom: 10px;
     box-sizing: border-box;
+    display: inline;
+    margin-bottom: 10px;
+
 }
 
 .signup-leftpage-content-2-3 {
     margin-bottom: 10px;
     box-sizing: border-box;
+    display: inline;
 }
 
 .signup-leftpage-content-2-4 {
