--- a/app/assets/stylesheets/splash/nav.scss
+++ b/app/assets/stylesheets/splash/nav.scss
@@ -84,6 +84,12 @@
     top: 64px;
     left: 0;
     box-shadow: 0px 7px 5px -7px rgba(0,0,0,0.3);
+    
+}
+
+.product-dropdown-up-sub {
+    display: flex;
+    width: 100px;
 }
 
 .products-dropdown-up li {
@@ -121,7 +127,7 @@
 
 .learn-dropdown-up-sub {
     display: flex;
-    margin-left: 50px;
+    margin-left: 375px;
 }
 
 
