--- a/app/assets/stylesheets/signup/signup_form.scss
+++ b/app/assets/stylesheets/signup/signup_form.scss
@@ -70,6 +70,31 @@
     background-color: white;
 }
 
+.signup-input-red {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 13px;
+    color: black;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: -0.1px;
+    text-align: left;
+    box-sizing: border-box;
+    border-style: solid;
+    border-width: 1px;
+    border-color:red;
+    background-color: rgb(245,248,250);
+    border-radius: 4px;
+    padding: 12px;
+    width: 100%;
+    height: 36px;
+    &:focus{
+        border-color:rgb(0,200,5)};
+}
+
+.signup-input-red:hover {
+    background-color: white;
+}
 .session-submit {
     display: flex;
     flex-direction: row;
