--- a/app/assets/stylesheets/user/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/user/dashboard/dashboard.scss
@@ -1,12 +1,14 @@
+
 .frequency-bar {
     display: flex;
     flex-direction: row;
     border-bottom-style: solid;
-    border-bottom-color: rgb(48,54,58);
+    border-bottom-color: rgb(228,233,237);
     border-bottom-width: 1px;
     height: 33px;
-    margin-left: -12px;
-    margin-right: -12px;
+    padding-top: 20px;
+    width: 100%;
+
 }
 
 .frequency-bar button {
@@ -14,7 +16,7 @@
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
     font-size: 13px;
     font-weight: 700;
-    line-height: 20px;
+    line-height: 23px;
     letter-spacing: -0.1px;
 }
 
@@ -30,13 +32,194 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(48,54,58);
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
     font-size: 15px;
     font-weight: 700;
     line-height: 24px;
     letter-spacing: -0.1px;
-    padding-top: 27px;
+    margin-top: 7px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    width: 107%;
+    border-radius: 4px;
+    &:hover {
+        background-color: rgb(245,248,250);
+        cursor: pointer;
+    }
+}
+
+.buying-power {
+    margin-left: 23px;
+}
+
+.funds {
+    margin-right: 23px;
+}
+
+.funds-hidden {
+    display: none;
+}
+
+
+.tooltip-date {
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: -0.1px;
+    color: rgb(111, 120, 126);
+}
+
+.tooltip-time {
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: -0.1px;
+    color: rgb(111, 120, 126);
+}
+
+.tooltip-value {
+    display: none;
+}
+
+.main-chart {
+    display: flex;
+    background-image: linear-gradient(to right, rgb(111, 120, 126) 10%, rgba(111, 120, 126, 0) 0%);
+    background-position: bottom;
+    background-size: 7px 1px;
+    background-repeat: repeat-x;
+    width: 100%;
+}
+
+.dashboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.portfolio-balance {
+    height: 100px;
+}
+
+.buying-station-hidden {
+    display: none;
+}
+
+.buying-station {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%
+}
+
+.buying-station-1 {
+    display: flex;
+    flex-direction: column;
+    width: 50%;   
+    border-top-style: solid;
+    border-top-width: 1px; 
+    border-spacing: 2px;
+    border-color: rgb(228,233,237);
+}
+
+.buying-station-1-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: rgb(4,13,20);
+    border-color: rgb(228,233,237);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-spacing: 2px;
+    height: 59px;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: -0.1px;
+    margin-top: 5px;
+}
+
+.buying-station-1-2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: rgb(4,13,20);
+    height: 59px;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: -0.1px;
+}
+
+.buying-station-1-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.buying-margin {
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    color: rgb(255,198,87);
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: -0.1px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
+.deposit-funds-button {
+    display: flex;
+    background-color: rgb(0, 200, 5);
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 48px;
+    min-width: 120px;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: -0.1px;
+    line-height: 20px;
+    color: white;
+    margin-bottom: 30px;
+}
+
+.buying-station-2 {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+    color: rgb(4,13,20);
+    border-color: rgb(228,233,237);
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-spacing: 2px;
+    height: 59px;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: -0.1px;
+}
+
+.buying-station-2-1 {
+    width: 90%;
+    margin-left: 30px;
+    height: 59px;
+    margin-top: 40px;
+}
+
+.buying-station-1-2-2 {
+    font-weight: 700;
+}
