--- a/app/assets/stylesheets/user/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/user/dashboard/dashboard.scss
@@ -25,7 +25,11 @@
 }
 
 .highlight-freq {
-    color: rgb(0, 200, 5)
+    color: rgb(0, 200, 5);
+    border-bottom-style: solid;
+    border-bottom-color: rgb(0, 200, 5);
+    border-bottom-width: 2px;
+    border-radius: 1px;
 }
 
 .buying-power-container {
@@ -40,12 +44,27 @@
     margin-top: 7px;
     padding-top: 25px;
     padding-bottom: 25px;
-    width: 107%;
+    width: 100%;
     border-radius: 4px;
+    background-color: white;
     &:hover {
         background-color: rgb(245,248,250);
         cursor: pointer;
     }
+}
+.buying-power-base {
+    width: 107%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    box-shadow: 0px 12px 24px rgba(0,0,0,0.06), 0px -12px 24px rgba(0,0,0,0.06);
+}
+
+.buying-power-base-hidden {
+    width: 107%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
 }
 
 .buying-power {
@@ -117,11 +136,12 @@
 .buying-station-1 {
     display: flex;
     flex-direction: column;
-    width: 50%;   
+    width: 45%;   
     border-top-style: solid;
     border-top-width: 1px; 
     border-spacing: 2px;
     border-color: rgb(228,233,237);
+    margin-left: 23px;
 }
 
 .buying-station-1-1 {
@@ -183,8 +203,6 @@
     width: 100%;
     height: 48px;
     min-width: 120px;
-    padding-left: 12px;
-    padding-right: 12px;
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
     font-size: 15px;
     font-weight: 700;
@@ -211,15 +229,97 @@
     font-weight: 400;
     line-height: 24px;
     letter-spacing: -0.1px;
+    margin-right: 23px;
 }
 
 .buying-station-2-1 {
     width: 90%;
-    margin-left: 30px;
+    margin-left: 40px;
     height: 59px;
     margin-top: 40px;
 }
 
 .buying-station-1-2-2 {
     font-weight: 700;
+}
+
+.deposit-form-hidden {
+    display: none;
+}
+
+
+.deposit-form {
+
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    width: 560px;
+    margin-top: 100px;
+   
+}
+
+.deposit-form-title {
+    font-size: 24px;
+    font-weight: 500;
+    letter-spacing: -0.33px;
+    line-height: 28px;
+    margin: 0 0 16px;
+    margin-bottom: 12px;
+    color: rgb(4,13,20);
+    font-family: "Capsule Sans Text", -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+.deposit-form-amount {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: -0.1px;
+    line-height: 20px;
+    color: rgb(4,13,20);
+    font-family: "Capsule Sans Text", -apple-system, BlinkMacSystemFont, sans-serif;
+    margin-top: 20px;
+}
+
+.deposit-input {
+    background: rgb(245,248,250);
+    border-color: rgb(245,248,250);
+    color: rgb(4,13,20);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    height: 36px;
+    padding: 0 13px;
+    font-family: "Capsule Sans Text", -apple-system, BlinkMacSystemFont, sans-serif;
+    width: 65%;
+}
+
+.deposit-submit {
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: -0.1px;
+    background: rgb(0, 200, 5);
+    border-color: rgb(0,200,5);
+    color: white;
+    border: 1px solid;
+    border-radius: 4px;
+    height: 48px;
+    width: 142px;
+    font-family: "Capsule Sans Text", -apple-system, BlinkMacSystemFont, sans-serif;
+    align-items: center;
+    margin-top: 60px;
+
+}
+
+.deposit-close {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    bottom: 300px;
+    left: 950px;
 }
