--- a/app/assets/stylesheets/user/news/news.scss
+++ b/app/assets/stylesheets/user/news/news.scss
@@ -51,3 +51,18 @@
     margin-top: 20px;
     border-top: 1px solid rgb(228,233,237);
 }
+
+.github-links {
+    margin-left: 3px;
+    font-size: 13px;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    line-height: 65px;
+    letter-spacing: -0.1px;
+    color: rgb(0,200, 5);
+
+}
+
+.extra {
+    height: 300px;
+}
