finished portfolio list

--- a/app/assets/stylesheets/user/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/user/dashboard/dashboard.scss
@@ -1,3 +1,43 @@
+.portfolio-tooltip {
+    display: flex;
+    flex-direction: column;
+    margin-right: 500px;
+    justify-content: flex-start;
+    width: 200px;
+    margin-bottom: 50px;
+
+}
+
+.portfolio-balance {
+    color: rgb(4,13,20);
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 34px;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: -0.33px;
+
+}
+
+.portfolio-return {
+    color: rgb(4,13,20);
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: -0.1px;
+    display: flex;
+    width: 700px;
+    margin-top: 5px;
+}
+
+.range-string {
+    color: rgb(111, 120, 126);
+    font-weight: 400;
+    width: 100px;
+    margin-left: 5px
+}
+
+
 
 .frequency-bar {
     display: flex;
@@ -7,8 +47,20 @@
     border-bottom-width: 1px;
     height: 33px;
     padding-top: 20px;
-    width: 100%;
+    width: 676px;
+    
 
+}
+
+.frequency-bar-red {
+    display: flex;
+    flex-direction: row;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(228,233,237);
+    border-bottom-width: 1px;
+    height: 33px;
+    padding-top: 20px;
+    width: 100%;
 }
 
 .frequency-bar button {
@@ -20,6 +72,19 @@
     letter-spacing: -0.1px;
 }
 
+.frequency-bar-red button {
+    margin: 0 12px;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 23px;
+    letter-spacing: -0.1px;
+}
+
+.frequency-bar-red button:hover {
+    color: rgb(255,80,0);
+}
+
 .frequency-bar button:hover {
     color: rgb(0,200,5);
 }
@@ -28,6 +93,14 @@
     color: rgb(0, 200, 5);
     border-bottom-style: solid;
     border-bottom-color: rgb(0, 200, 5);
+    border-bottom-width: 2px;
+    border-radius: 1px;
+}
+
+.highlight-freq-red {
+    color: rgb(255,80,0);
+    border-bottom-style: solid;
+    border-bottom-color: rgb(255,80,0);
     border-bottom-width: 2px;
     border-radius: 1px;
 }
@@ -72,7 +145,7 @@
 }
 
 .funds {
-    margin-right: 23px;
+    margin-right: 25px;
 }
 
 .funds-hidden {
@@ -102,7 +175,7 @@
     display: none;
 }
 
-.main-chart {
+.main-chart-1d {
     display: flex;
     background-image: linear-gradient(to right, rgb(111, 120, 126) 10%, rgba(111, 120, 126, 0) 0%);
     background-position: bottom;
@@ -111,16 +184,21 @@
     width: 100%;
 }
 
+.main-chart-rest {
+    display: flex;
+    width: 100%;
+}
+
+
+
 .dashboard {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 676px;
 }
 
-.portfolio-balance {
-    height: 100px;
-}
 
 .buying-station-hidden {
     display: none;
@@ -253,8 +331,13 @@
     display: flex;
     height: 100vh;
     flex-direction: column;
-    width: 560px;
-    margin-top: 100px;
+    width: 1200px;
+    margin-top: 70px;
+    z-index: 1000;
+    position: fixed;
+    background-color: white;
+    padding: 100px;
+    left: 400px;
    
 }
 
@@ -272,7 +355,7 @@
 .deposit-form-amount {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     font-size: 13px;
     font-weight: 400;
@@ -293,7 +376,9 @@
     height: 36px;
     padding: 0 13px;
     font-family: "Capsule Sans Text", -apple-system, BlinkMacSystemFont, sans-serif;
-    width: 65%;
+    width: 30%;
+    margin-left: 130px;
+
 }
 
 .deposit-submit {
