--- a/app/assets/stylesheets/user/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/user/dashboard/dashboard.scss
@@ -152,6 +152,14 @@
     display: none;
 }
 
+.portfolio-tooltip-stockname {
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 35px;
+    font-weight: 450;
+    line-height: 24px;
+    letter-spacing: -0.1px;
+    padding-bottom: 10px;
+}
 
 .tooltip-date {
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
