--- a/app/assets/stylesheets/user/news/news.scss
+++ b/app/assets/stylesheets/user/news/news.scss
@@ -21,6 +21,8 @@
 .news-button-container {
     display: flex;
     justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 .news-button {
@@ -69,6 +71,7 @@
     letter-spacing: -0.1px;
     margin-top: 20px;
     border-top: 1px solid rgb(228,233,237);
+    
 }
 
 .github-links {
@@ -91,6 +94,45 @@
     color: rgb(255,80, 0);
 }
 
+.company {
+    display: flex;
+    flex-direction: column;
+}
+
+.company-description {
+    margin-top: 20px;
+    color: rgb(4,13,20);
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: -0.1px
+}
+
+.company-facts-2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    color: rgb(4,13,20);
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    letter-spacing: -0.1px;
+    margin-top: 40px;
+}
+
+.company-facts-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.title {
+    font-weight: 700;
+    
+}
 
 
 .extra {
