--- a/app/assets/stylesheets/user/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/user/dashboard/dashboard.scss
@@ -155,7 +155,7 @@
 .portfolio-tooltip-stockname {
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
     font-size: 35px;
-    font-weight: 450;
+    font-weight: 400;
     line-height: 24px;
     letter-spacing: -0.1px;
     padding-bottom: 10px;
@@ -346,6 +346,7 @@
     background-color: white;
     padding: 100px;
     left: 400px;
+    box-shadow: 0px 12px 24px rgba(0,0,0,0.06), 0px -12px 24px rgba(0,0,0,0.06);
    
 }
 
