--- a/app/assets/stylesheets/splash/searchbar.scss
+++ b/app/assets/stylesheets/splash/searchbar.scss
@@ -1,7 +1,10 @@
 .sub-nav-2 {
     display: flex;
-    margin-left: 300px;
+  
+}
 
+.nav-search {
+    margin-right: 150px;
 }
 
 .nav-search-input {
@@ -16,7 +19,7 @@
     border-radius: 4px;
     padding: 0px 16px 0px;
     margin-top: 10px;
-    width: 500px;
+    width: 450px;
     &:hover {
         box-shadow: 0px 12px 24px rgba(0,0,0,0.06), 0px -12px 24px rgba(0,0,0,0.06);
         border-color: white;
@@ -36,7 +39,7 @@
     border-radius: 4px;
     padding: 0px 16px 0px;
     margin-top: 10px;
-    width: 500px;
+    width: 450px;
     background-color: white;
     box-shadow: 0px 12px 24px rgba(0,0,0,0.06), 0px -12px 24px rgba(0,0,0,0.06);
 }
@@ -73,7 +76,7 @@
     position: absolute;
     flex-direction: column;
     margin-top: 45px;
-    width: 534px;
+    width: 483px;
     z-index: 100;
     background-color: white;
     box-shadow: 0px 15px 24px rgba(0,0,0,0.06), 0px 15px 24px rgba(0,0,0,0.06);
