--- a/app/assets/stylesheets/user/portfolio/portfolio.scss
+++ b/app/assets/stylesheets/user/portfolio/portfolio.scss
@@ -1,5 +1,6 @@
 .portfolio-dashboard {
     display: flex;
+    position: fixed;
     flex-direction: column;
     color: rgb(4, 13 ,20);
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
