--- a/app/assets/stylesheets/user/transaction/transaction.scss
+++ b/app/assets/stylesheets/user/transaction/transaction.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     width: 270px;
-    height: 400px;
+    // height: 400px;
     box-shadow: 0px 12px 24px rgba(0,0,0,0.06), 0px -12px 24px rgba(0,0,0,0.06);
 }
 
@@ -255,6 +255,7 @@
     line-height: 20px;
     padding-top: 15px;
     border-top: 1px solid rgb(228, 233, 237);
+    margin-bottom: 15px;
 }
 
 .transaction-table-bottom-text-green {
