--- a/app/assets/stylesheets/user/user_nav.scss
+++ b/app/assets/stylesheets/user/user_nav.scss
@@ -7,9 +7,10 @@
 .user-nav {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     height: 64px;
-    width: 1024px;
+    width: 100%;
     max-width: 100%;
 
 }
@@ -18,8 +19,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: absolute;
-    right: 48px;
+    // position: absolute;
+    // right: 48px;
+    margin-right: 40px;
     padding: 0 4px 0 6px;
 }
 
@@ -42,6 +44,6 @@
     background-color: white;
     // border-radius: 4px;
     border: 1px solid grey;
-    position: absolute;
+    // position: absolute;
 }
 
