--- a/app/assets/stylesheets/user/transaction/transaction.scss
+++ b/app/assets/stylesheets/user/transaction/transaction.scss
@@ -265,3 +265,19 @@
 .transaction-table-bottom-text-red {
     color: rgb(255, 80, 0)
 }
+
+.transaction-error {
+    display: flex;
+    flex-direction: column;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-weight: 400;
+    letter-spacing: -.1px;
+    font-size: 13px;
+    line-height: 20px;
+    margin-bottom: 30px;
+}
+
+.error-header {
+    font-weight: 700;
+    margin-bottom: 5px;
+}
