--- a/app/assets/stylesheets/user/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/user/dashboard/dashboard.scss
@@ -296,6 +296,9 @@
     line-height: 20px;
     color: white;
     margin-bottom: 30px;
+    &:hover {
+        filter: brightness(90%)
+    }
 }
 
 .buying-station-2 {
@@ -337,15 +340,16 @@
 .deposit-form {
 
     display: flex;
-    height: 100vh;
     flex-direction: column;
-    width: 1200px;
+    width: 750px;
     margin-top: 70px;
     z-index: 1000;
     position: fixed;
     background-color: white;
-    padding: 100px;
-    left: 400px;
+    padding-top: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-bottom: 90px;
     box-shadow: 0px 12px 24px rgba(0,0,0,0.06), 0px -12px 24px rgba(0,0,0,0.06);
    
 }
@@ -407,13 +411,20 @@
     font-family: "Capsule Sans Text", -apple-system, BlinkMacSystemFont, sans-serif;
     align-items: center;
     margin-top: 60px;
+    &:hover {
+        filter: brightness(90%)
+    }
 
 }
 
 .deposit-close {
-    position: relative;
+   
+   margin-left: 400px;
+   margin-bottom: 70px;
     height: 20px;
     width: 20px;
-    bottom: 300px;
-    left: 950px;
+
+    &:hover {
+        opacity: 0.5;
+    }
 }
