--- a/app/assets/stylesheets/user/portfolio/portfolio.scss
+++ b/app/assets/stylesheets/user/portfolio/portfolio.scss
@@ -10,8 +10,6 @@
     align-items: center;
     border-color: rgb(228, 233, 237);
     background-color: white;
-    border-top-style: solid;
-    border-top-width: 1px;
     border-bottom-style: solid;
     border-bottom-width: 1px;
     box-shadow: 0px 12px 24px rgba(0,0,0,0.06), 0px -12px 24px rgba(0,0,0,0.06);
@@ -22,6 +20,8 @@
 .portfolio-dashboard-stocks {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    border-top: 1px solid rgb(228, 233, 237);
 }
 
 .portfolio-dashboard-title {
