--- a/app/assets/stylesheets/splash/nav.scss
+++ b/app/assets/stylesheets/splash/nav.scss
@@ -51,6 +51,13 @@
      font-size: 26px;
      font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
      padding: 20px;
+     
+}
+
+.black-logo {
+    &:hover {
+        opacity: 0.5;
+    }
 }
 
 .subsubnav {
