--- a/app/assets/stylesheets/user/news/news.scss
+++ b/app/assets/stylesheets/user/news/news.scss
@@ -26,6 +26,14 @@
     flex-direction: column;
 }
 
+.news-button-adjust {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+
+}
+
 .news-button {
     color: rgb(0,200, 5);
     align-items: center;
@@ -148,8 +156,10 @@
     min-height: 7.23%;
     align-items: center;
     justify-content: space-between;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    // padding-top: 25px;
+    // padding-bottom: 25px;
+    padding-top: 3.2%;
+    padding-bottom: 3.2%;
     &:hover {
         background-color: rgb(245,248,250)
     }
