--- a/app/assets/stylesheets/user/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/user/dashboard/dashboard.scss
@@ -124,6 +124,7 @@
         background-color: rgb(245,248,250);
         cursor: pointer;
     }
+    border-bottom: 1px solid rgb(228,233,237);
 }
 .buying-power-base {
     width: 107%;
@@ -280,9 +281,30 @@
     padding-bottom: 20px;
 }
 
-.deposit-funds-button {
+.deposit-funds-button-green {
     display: flex;
     background-color: rgb(0, 200, 5);
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 48px;
+    min-width: 120px;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: -0.1px;
+    line-height: 20px;
+    color: white;
+    margin-bottom: 30px;
+    &:hover {
+        filter: brightness(90%)
+    }
+}
+
+.deposit-funds-button-red {
+    display: flex;
+    background-color: rgb(255, 80, 0);
     border-radius: 4px;
     align-items: center;
     justify-content: center;
@@ -394,7 +416,7 @@
 
 }
 
-.deposit-submit {
+.deposit-submit-green {
     display: flex;
     justify-content: center;
     font-size: 13px;
@@ -403,6 +425,29 @@
     letter-spacing: -0.1px;
     background: rgb(0, 200, 5);
     border-color: rgb(0,200,5);
+    color: white;
+    border: 1px solid;
+    border-radius: 4px;
+    height: 48px;
+    width: 142px;
+    font-family: "Capsule Sans Text", -apple-system, BlinkMacSystemFont, sans-serif;
+    align-items: center;
+    margin-top: 60px;
+    &:hover {
+        filter: brightness(90%)
+    }
+
+}
+
+.deposit-submit-red {
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: -0.1px;
+    background: rgb(255, 80, 0);
+    border-color: rgb(255,80,0);
     color: white;
     border: 1px solid;
     border-radius: 4px;
