--- a/app/assets/stylesheets/user/news/news.scss
+++ b/app/assets/stylesheets/user/news/news.scss
@@ -15,22 +15,38 @@
     letter-spacing: -0.33px;
     padding-top: 60px;
     padding-bottom: 20px;
-    border-top: 1px solid rgb(228,233,237)
+    // border-top: 1px solid rgb(228,233,237)
+}
+
+.news-header-stock {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(228,233,237);
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: -0.33px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    // border-top: 1px solid rgb(228,233,237)
 }
 
 .news-button-container {
     display: flex;
     justify-content: center;
     // margin-top: 40px;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
     flex-direction: column;
+    // height: 100%;
 }
 
 .news-button-adjust {
     display: flex;
     justify-content: center;
     margin-top: 40px;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
 
 }
 
@@ -151,15 +167,16 @@
 .individual-news-container {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    max-height: 7.23%;
-    min-height: 7.23%;
+    // width: 100%;
+    // max-height: 8%;
+    // min-height: 8%;
+    height: 150px;
     align-items: center;
     justify-content: space-between;
     // padding-top: 25px;
     // padding-bottom: 25px;
-    padding-top: 3.2%;
-    padding-bottom: 3.2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     &:hover {
         background-color: rgb(245,248,250)
     }
@@ -170,6 +187,12 @@
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
 }
 
+.news-button-container-2 {
+    display: flex;
+    flex-direction: column;
+    // margin-top: 20px;
+    width: 100%;
+}
 
 .individual-news-description {
     display: flex;
@@ -207,5 +230,5 @@
 
 .news-image-container {
     width: 25%;
-    height: 100%;
+    height: 80%;
 }
