--- a/app/assets/stylesheets/user/user_body.scss
+++ b/app/assets/stylesheets/user/user_body.scss
@@ -25,3 +25,62 @@
     justify-content: center;
 
 }
+
+.spinner {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(1px);
+}
+
+.spinner-stock {
+    height: 196px;
+    width: 676px;
+    display: flex;
+    justify-content: center;
+    backdrop-filter: blur(1px);
+}
+
+.stock-user-info {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(228,233,237);
+    border-radius: 4px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: -.1px;
+    line-height: 20px;
+    padding: 25px;
+    width: 100%;
+}
+
+.stock-user-info-header {
+    padding-bottom: 5px;
+}
+.stock-user-info-market-value {
+    font-size: 21px;
+    font-weight: 500;
+    line-height: 28px;
+    padding-bottom: 10px;
+}
+
+.stock-user-details {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(228,233,237)
+}
+
+.stock-user-details-last {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 10px;
+    padding-top: 10px;
+
+}
