--- a/app/assets/stylesheets/user/user_nav.scss
+++ b/app/assets/stylesheets/user/user_nav.scss
@@ -2,6 +2,9 @@
     width: 48px;
     height: 48px;
     margin-left: 40px;
+    &:hover {
+        opacity: 0.5;
+    }
 }
 
 .user-nav {
@@ -19,13 +22,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     // position: absolute;
     // right: 48px;
     margin-right: 40px;
     padding: 0 4px 0 6px;
 }
 
-.user-nav-1 li {
+.user-nav-1 div {
     display: inline-block;
     padding: 6px 0px;
     font-family: "Capsule Sans Text", -apple-system, BlinkMacSystemFont, sans-serif;
@@ -35,7 +39,7 @@
     line-height: 20px;
     margin-left: 33px;
     &:hover {
-        color: rgb(0,200,5);
+        opacity: 0.5;
     }
 }
 
@@ -47,3 +51,14 @@
     // position: absolute;
 }
 
+.nav-icon {
+    font-size: 30px;
+}
+
+
+// .email-li {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     padding: 0px;
+// }
