fixed splash page layout

--- a/app/assets/stylesheets/user/portfolio/portfolio.scss
+++ b/app/assets/stylesheets/user/portfolio/portfolio.scss
@@ -84,4 +84,7 @@
     height: 80px;
     width:220px;
     padding: 2px 24px 2px;
+    color: rgb(111, 120, 126);
+    display: flex;
+    align-items: center;
 }
