--- a/app/assets/stylesheets/splash/body.scss
+++ b/app/assets/stylesheets/splash/body.scss
@@ -1,13 +1,14 @@
 .splashbody {
      display: flex;
+     flex-direction: row;
      background-color: rgb(195, 245, 60);
-     height: 655px;
+     height: 700px;
      align-items: center;
      border-bottom-color: black;
      border-bottom-style: solid;
      border-bottom-width: 1px;
      box-shadow: inset 0 7px 5px -7px rgba(0,0,0,0.3);
-     justify-content: center;
+     justify-content: left;
 }
 
 
@@ -17,8 +18,8 @@
      // height: 340px;
      // width: 450px;
      width: 26%;
-     height: 340px;
-     justify-content: space-between;
+     height: auto;
+     // justify-content: space-between;
      align-items: left;
      margin-right: 30px;
 
@@ -30,6 +31,7 @@
      font-style: normal;
      font-weight: 500;
      line-height: 60px;
+     margin-bottom: 40px;
 }
 
 .splashbodydescription {
@@ -38,6 +40,7 @@
      font-style: normal;
      font-weight: 500;
      line-height: 36px;
+     margin-bottom: 40px;
 }
 
 .splashbody-signup {
@@ -61,13 +64,53 @@
     filter: brightness(1.5);
 }
 
-.splashbody {
+
+.splash-img-body {
      display: flex;
-     flex-direction: row-reverse;
+     width: 10%;
+     height: 10%;
 }
 
 
 .splash-img {
-     height: 100%;
-     width: 100%;
+     // height: 30%;
+     // width: 30%;
+     position: absolute;
+     // left: 0px;
+     // top: 0px;
+     // z-index: -1;
+     // width: 40%;
+    
+     // height: 50%;
+     max-width: 30%;
+     height: auto;
+     left: 50%;
+     top: 25%
+
+
+}
+
+.splash-img-screen {
+     // height: 30%;
+     // width: 30%;
+     position: absolute;
+     left: 50%;
+     
+     top: 25%;
+     // z-index: -1
+  
+     // width: 40%;
+     // height: 50%;
+      max-width: 30%;
+     height: auto;
+}
+
+.enddd {
+     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: -0.33px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
