--- a/app/assets/stylesheets/user/news/news.scss
+++ b/app/assets/stylesheets/user/news/news.scss
@@ -136,13 +136,19 @@
 
 .company-facts-2 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     width: 100%;
     color: rgb(4,13,20);
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
     letter-spacing: -0.1px;
     margin-top: 40px;
+}
+
+.company-facts-1 {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
 
 .company-facts-3 {
@@ -152,6 +158,7 @@
     font-size: 13px;
     font-weight: 400;
     line-height: 20px;
+    padding-top: 15px;
 }
 
 .title {
