fixed meta property

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og. https://ogp.me/ns#">
   <head>
-    <title>Investing for Everyone | EquityTrade</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag asset_path('robinhood_logo-1.png') %>
-    
-    <meta property="og:title" content="EquityTrade" />
+      <title>Investing for Everyone | EquityTrade</title>
+      <meta property="og:title" content="EquityTrade" />
       <meta property='og:image' content="<%= image_url('equitytrade.png') %>"/>
       <meta property="og:description"
         content="EquityTrade is a full stack web app that allows useres to simulate trades and manage their portfolio."
@@ -17,6 +10,17 @@
       <meta property="og:url"
         content="https://equitytrade.herokuapp.com"
       />
+    
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag asset_path('robinhood_logo-1.png') %>
+    
+    
+
+ 
 
      
     <script type="text/javascript">
