--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html prefix="og. https://ogp.me/ns#">
+<html prefix="og: https://ogp.me/ns#">
   <head>
       <title>Investing for Everyone | EquityTrade</title>
       <meta property="og:title" content="EquityTrade" />
