fixed meta property bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-<html prefix="og: https://ogp.me/ns#">
+<html>
   <head>
       <title>Investing for Everyone | EquityTrade</title>
+      <%= csrf_meta_tags %>
+      <%= csp_meta_tag %>
+      <%= favicon_link_tag asset_path('robinhood_logo-1.png') %>
+
+      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>  
+
       <meta property="og:title" content="EquityTrade" />
       <meta property='og:image' content="<%= image_url('equitytrade.png') %>"/>
       <meta property="og:description"
-        content="EquityTrade is a full stack web app that allows useres to simulate trades and manage their portfolio."
+        content="EquityTrade is a full stack web app that allows users to simulate trades and manage their portfolio."
       />
       <meta property="og:url"
         content="https://equitytrade.herokuapp.com"
       />
     
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= favicon_link_tag asset_path('robinhood_logo-1.png') %>
     
-    
-
- 
-
-     
     <script type="text/javascript">
     window.errorlogoURL = "<%= image_url('error-icon-exclamation.png') %>"
-    
-    
     </script>
-
   </head>
-
   <body>
     <%= yield %>
   </body>
